feat(repo-metrics): add contributors filter in repo metrics page and reoutes
