# Codigo/supportplatform-service/src/swagger/routes.ts
@@ -102,6 +102,7 @@ const models: TsoaRoute.Models = {
             "startedAt": {"dataType":"date","validators":{"isDate":{"errorMsg":"startedAt must be a valid date"}}},
             "endedAt": {"dataType":"date","validators":{"isDate":{"errorMsg":"endedAt must be a valid date"}}},
             "branchName": {"dataType":"string"},
+            "contributor": {"dataType":"array","array":{"dataType":"string"}},
         },
         "additionalProperties": false,
     },
@@ -111,6 +112,7 @@ const models: TsoaRoute.Models = {
         "properties": {
             "startedAt": {"dataType":"date","validators":{"isDate":{"errorMsg":"startedAt must be a valid date"}}},
             "endedAt": {"dataType":"date","validators":{"isDate":{"errorMsg":"endedAt must be a valid date"}}},
+            "contributor": {"dataType":"array","array":{"dataType":"string"}},
         },
         "additionalProperties": false,
     },
