# Codigo/supportplatform-web/src/pages/repo/detail/metrics/fileTypes/loader.ts
@@ -28,6 +28,9 @@ export default function repositoryFileTypeMetricsLoader({
                 startedAt:
                     searchParams.get(pageRouteSearchParams.startedAt) ??
                     undefined,
+                contributors:
+                    searchParams.getAll(pageRouteSearchParams.contributor) ??
+                    undefined,
             }
         )
     );
